--- a/DPA/users/templates/users/base.html
+++ b/DPA/users/templates/users/base.html
@@ -25,14 +25,14 @@
                 color: green;
             }
     </style>
-    <title>Personal Assistant</title>
+    <title>Park Easy</title>
 </head>
 <body>
     <div class="container-fluid">
         <div class="row bg-primary py-3">
             <div class="col-md-8">
                 <h1 class="text-white">
-                    <a href="/" class="text-decoration-none text-white">Personal Assistant</a>
+                    <a href="/" class="text-decoration-none text-white">Park Easy</a>
                 </h1>
             </div>
         </div>
