--- a/DPA/users/templates/users/profile.html
+++ b/DPA/users/templates/users/profile.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% load static %}
     <link rel="stylesheet" href="{% static 'users/style.css' %}">
-    <title>Personal Assistant</title>
+    <title>Park Easy</title>
 
     <style>
         .big-button {
@@ -24,13 +24,17 @@
             left: 50%;
             transform: translateX(-50%);
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             text-align: center;
         }
-        .button-wrapper {
-            margin: 0 10px;
+        .dropdown-menu {
+            text-align: center;
+        }
+        .dropdown-menu .dropdown-item {
+            font-size: 18px;
+            padding: 10px 20px;
         }
     </style>
 </head>
@@ -39,7 +43,7 @@
         <div class="row bg-primary py-3">
             <div class="col-md-8">
                 <h1 class="text-white">
-                    <a href="/" class="text-decoration-none text-white">Personal Assistant</a>
+                    <a href="/" class="text-decoration-none text-white">Park Easy</a>
                 </h1>
             </div>
             <div class="col-md-4 d-flex align-items-center justify-content-end">
@@ -53,17 +57,15 @@
     </div>
 
     <div class="center-container">
-        <div class="button-wrapper">
-            <p>Contact book</p>
-            <a href="/content" class="btn btn-warning big-button">Contact</a>
-        </div>
-        <div class="button-wrapper">
-            <p>Notes</p>
-            <a href="/notes" class="btn btn-warning big-button">Notes</a>
-        </div>
-        <div class="button-wrapper">
-            <p>File storage</p>
-            <a href="/files/listfiles" class="btn btn-warning big-button">Files</a>
+        <div class="dropdown">
+            <button class="btn btn-warning big-button dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                Menu
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <li><a class="dropdown-item" href="/content">Contact book</a></li>
+                <li><a class="dropdown-item" href="/notes">Notes</a></li>
+                <li><a class="dropdown-item" href="/files/listfiles">File storage</a></li>
+            </ul>
         </div>
     </div>
 
