--- a/ParkEasy/admin_panel/templates/admin_panel/users.html
+++ b/ParkEasy/admin_panel/templates/admin_panel/users.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Users</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        {% load static %}
-        <link rel="stylesheet" href="{% static 'contacts/style.css' %}">
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">ParkEasy</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="{% url 'admin_panel:users' %}">Users</a>
-                        </li>
-                    </ul>
-        <!--            <form class="d-flex" role="search">-->
-        <!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-        <!--                <button class="btn btn-outline-success" type="submit">Search</button>-->
-        <!--            </form>-->
-                </div>
-            </div>
-        </nav>
+{% extends 'admin_panel/base.html' %}
+{% block content %}
         <div class="container-fluid">
             <div class="container mt-3">
                 <div class="list-group">
@@ -39,11 +13,16 @@
                                     </div>
                                     <p class="mb-1">Phone: {{ user.phone_number }}</p>
                                     <p class="mb-1">Email: {{ user.email }}</p>
+                                    <p class="mb-1">Plates:
+                                        {% for plate in user.plates.all %}
+                                            {{ plate.plate_number }}{% if plate.is_banned %} (Banned){% endif %}{% if not forloop.last %}, {% endif %}
+                                        {% endfor %}
+                                    </p>
                                 </div>
                                 <div class="dropdown mt-2">
                                     <button class="btn btn-default dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Options</button>
                                     <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="{% url 'admin_panel:users' %}">Edit</a></li>
+                                        <li><a class="dropdown-item" href="{% url 'admin_panel:edit_user' user.id %}">Edit</a></li>
                                         <li><a class="dropdown-item" href="#" onclick="openDeleteModal()">Delete</a></li>
                                     </ul>
                                 </div>
@@ -70,7 +49,6 @@
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script>
             var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
@@ -98,5 +76,4 @@
                 $('#myModal').modal('hide');
                 }
         </script>
-    </body>
-</html>
+{% endblock %}
