--- a/ParkEasy/users/templates/users/login.html
+++ b/ParkEasy/users/templates/users/login.html
@@ -120,7 +120,7 @@
 <body>
     <div class="login">
         <h1>Login</h1>
-        <form method="post">
+        <form method="post">{% csrf_token %}
             <input type="text" name="u" placeholder="Username" required="required">
             <input type="password" name="p" placeholder="Password" required="required">
             <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
