--- a/ParkEasy/admin_panel/templates/admin_panel/base.html
+++ b/ParkEasy/admin_panel/templates/admin_panel/base.html
@@ -99,6 +99,51 @@
             .banned {
                 width: 5%;
             }
+
+            .rate-page {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 80vh;
+                margin: 0;
+                font-family: Arial, sans-serif;
+            }
+
+            .rate {
+                font-size: 100px;
+                font-weight: bold;
+                text-transform: uppercase;
+                color: #333;
+            }
+
+            .rate-container {
+                text-align: center;
+            }
+
+            .messages {
+                list-style-type: none;
+                padding: 0;
+            }
+
+            .messages li {
+                padding: 10px;
+                margin-bottom: 10px;
+                border: 1px solid transparent;
+                border-radius: 4px;
+            }
+
+            .messages .success {
+                background-color: #dff0d8;
+                border-color: #d6e9c6;
+                color: #3c763d;
+            }
+
+            .messages .error {
+                background-color: #f2dede;
+                border-color: #ebccd1;
+                color: #a94442;
+            }
+
         </style>
     </head>
     <body>
@@ -112,6 +157,9 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'admin_panel:users' %}">Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'admin_panel:rate' %}">Rate</a>
                         </li>
                     </ul>
                 </div>
