--- a/ParkEasy/users/templates/users/login.html
+++ b/ParkEasy/users/templates/users/login.html
@@ -121,8 +121,36 @@
     <div class="login">
         <h1>Login</h1>
         <form method="post">
-            <input type="text" name="u" placeholder="Username" required="required">
-            <input type="password" name="p" placeholder="Password" required="required">
+            {% csrf_token %}
+            {% if form.non_field_errors %}
+                <div class="errorlist">
+                    {% for error in form.non_field_errors %}
+                        <div>{{ error }}</div>
+                    {% endfor %}
+                </div>
+            {% endif %}
+            <div class="form-group">
+                {{ form.username.label_tag }}
+                {{ form.username }}
+                {% if form.username.errors %}
+                    <div class="errorlist">
+                        {% for error in form.username.errors %}
+                            <div>{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.password.label_tag }}
+                {{ form.password }}
+                {% if form.password.errors %}
+                    <div class="errorlist">
+                        {% for error in form.password.errors %}
+                            <div>{{ error }}</div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
             <button type="submit" class="btn btn-primary btn-block btn-large">Let me in.</button>
             <a href="/password_reset" class="recover-password-link">Forgot your password?</a>
         </form>
