--- a/ParkEasy/admin_panel/templates/admin_panel/base.html
+++ b/ParkEasy/admin_panel/templates/admin_panel/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>Admin Panel</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -144,6 +145,42 @@
                 color: #a94442;
             }
 
+            .reports-container {
+            margin: 20px;
+            }
+
+            .report-item {
+                display: flex;
+                align-items: center;
+                margin-bottom: 10px;
+            }
+
+            .report-item a {
+                margin-left: 10px;
+            }
+
+            .report-icon {
+                font-size: 1.5em;
+                color: #007bff;
+            }
+
+            .report-item a.btn {
+                display: inline-flex;
+                align-items: center;
+                text-decoration: none;
+                color: white;
+                background-color: #007bff;
+                padding: 0.5em 1em;
+                border-radius: 0.25em;
+            }
+
+            .report-item a.btn:hover {
+                background-color: #0056b3;
+            }
+
+            .report-icon {
+                margin-right: 0.5em;
+            }
         </style>
     </head>
     <body>
@@ -160,6 +197,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'admin_panel:rate' %}">Rate</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'admin_panel:parking_history' %}">Parking History</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{% url 'admin_panel:reports' %}">Reports</a>
                         </li>
                     </ul>
                 </div>
