--- a/ParkEasy/users/templates/users/profile.html
+++ b/ParkEasy/users/templates/users/profile.html
@@ -128,6 +128,9 @@
                     <button type="submit" class="btn btn-light me-2">Log Out</button>
                 </form>
                 <a href="/change_password" class="btn btn-light me-2">Change password</a>
+                <a href="/change_password" class="btn btn-light me-2">Редагування особистих данних </a>
+                <a href="/change_password" class="btn btn-light me-2">Звіт</a>
+                <a href="/change_password" class="btn btn-light me-2">Почати парковку</a>
             </div>
         </div>
     </div>
