--- a/ParkEasy/users/templates/users/profile.html
+++ b/ParkEasy/users/templates/users/profile.html
@@ -123,6 +123,9 @@
                 </h1>
             </div>
             <div class="col-md-4 d-flex align-items-center justify-content-end">
+                {% if user.is_superuser %}
+                    <a href="{% url 'admin_panel:users' %}" class="btn btn-secondary">Admin Panel</a>
+                {% endif %}
                 <form id="logout-form" action="/logout/" method="post">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-light me-2">Log Out</button>
