my fourth change

--- a/ParkEasy/users/templates/users/profile.html
+++ b/ParkEasy/users/templates/users/profile.html
@@ -157,6 +157,15 @@
             </div>
         </div>
     </form>
+     {% if text %}
+        <div class="row mt-4">
+            <div class="col-12">
+                <p class="text-white">Розпізнаний номерний знак: <strong>{{ text }}</strong></p>
+                <p class="text-white">ID користувача: <strong>{{ user.id }}</strong></p>
+            </div>
+        </div>
+        {% endif %}
+
 </div>
 
 
