додав відображення ставки паркування за годину на головну сторінку

--- a/ParkEasy/users/templates/users/profile.html
+++ b/ParkEasy/users/templates/users/profile.html
@@ -121,6 +121,7 @@
                 <h1 class="text-white">
                     <a href="/" class="text-decoration-none text-white">Park Easy</a>
                 </h1>
+                <h1 class="text-white">Current Rate: {{ current_rate }} UAH / hour</h1>
             </div>
             <div class="col-md-4 d-flex align-items-center justify-content-end">
                 {% if user.is_superuser %}
