додав в базу і на фронт ліміт паркування

--- a/ParkEasy/users/templates/users/edit_user.html
+++ b/ParkEasy/users/templates/users/edit_user.html
@@ -184,6 +184,10 @@
                                 <label for="{{ profile_form.email.id_for_label }}">Email:</label>
                                 {{ profile_form.email }}
                             </div>
+                            <div class="form-row">
+                                <label for="{{ profile_form.parking_limit.id_for_label }}">Parking Limit (UAH / month):</label>
+                                {{ profile_form.parking_limit }}
+                            </div>
                         </div>
 
                         <h3 class="text-center mt-4">Plates</h3>
