--- a/ParkEasy/admin_panel/templates/admin_panel/users.html
+++ b/ParkEasy/admin_panel/templates/admin_panel/users.html
@@ -18,6 +18,7 @@
                                             {{ plate.plate_number }}{% if plate.is_banned %} (Banned){% endif %}{% if not forloop.last %}, {% endif %}
                                         {% endfor %}
                                     </p>
+                                    <p class="mb-1">Parking Limit: {{ user.parking_limit }} UAH / month</p>
                                 </div>
                                 <div class="dropdown mt-2">
                                     <button class="btn btn-default dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Options</button>
