--- a/ParkEasy/admin_panel/templates/admin_panel/users.html
+++ b/ParkEasy/admin_panel/templates/admin_panel/users.html
@@ -20,13 +20,14 @@
                                     </p>
                                     <p class="mb-1">Parking Limit: {{ user.parking_limit }} UAH / month</p>
                                 </div>
-                                <div class="dropdown mt-2">
-                                    <button class="btn btn-default dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Options</button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="{% url 'admin_panel:edit_user' user.id %}">Edit</a></li>
-                                        <li><a class="dropdown-item" href="#" onclick="openDeleteModal()">Delete</a></li>
-                                    </ul>
-                                </div>
+                                <div><a class="btn btn-default" type="button" aria-expanded="false" href="{% url 'admin_panel:edit_user' user.id %}">Edit</a></div>
+<!--                                <div class="dropdown mt-2">-->
+<!--                                    <button class="btn btn-default dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Options</button>-->
+<!--                                    <ul class="dropdown-menu">-->
+<!--                                        <li><a class="dropdown-item" href="{% url 'admin_panel:edit_user' user.id %}">Edit</a></li>-->
+<!--                                        <li><a class="dropdown-item" href="#" onclick="openDeleteModal()">Delete</a></li>-->
+<!--                                    </ul>-->
+<!--                                </div>-->
                                 <div class="modal fade" id="myModal" role="dialog">
                                     <div class="modal-dialog modal-sm">
                                         <div class="modal-content">
