--- a/ParkEasy/users/templates/users/edit_user.html
+++ b/ParkEasy/users/templates/users/edit_user.html
@@ -12,30 +12,17 @@
             * {
                 box-sizing: border-box;
             }
-            html {
-                width: 100%;
-                height: 100%;
-                overflow: hidden;
+
+            html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            font-family: 'Open Sans', sans-serif;
+            background: linear-gradient(to bottom, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                        linear-gradient(135deg, #670d10 0%, #092756 100%);
             }
-            body {
-                width: 100%;
-                height: 100%;
-                font-family: 'Open Sans', sans-serif;
-                background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                            -webkit-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                            -webkit-linear-gradient(135deg, #670d10 0%, #092756 100%);
-                background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                            -moz-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                            -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-                background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                            -o-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                            -o-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-                background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                            -ms-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                            -ms-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-                background: linear-gradient(to bottom, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                            linear-gradient(135deg, #670d10 0%, #092756 100%);
-            }
+
             .login {
                 position: absolute;
                 top: 50%;
@@ -139,6 +126,20 @@
             .plate-field {
                 width: 80%;
                 margin-right: 10px;
+            }
+
+            .container-fluid {
+                height: 100%;
+                overflow-y: auto;
+                padding-bottom: 20px;
+            }
+
+            .form-container {
+                padding: 20px;
+                border-radius: 8px;
+                margin: 0 auto;
+                max-width: 800px;
+                overflow: visible;
             }
         </style>
     </head>
