--- a/ParkEasy/neural_networks/templates/neural_networks/upload_image.html
+++ b/ParkEasy/neural_networks/templates/neural_networks/upload_image.html
@@ -1,21 +1,134 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Load Image</title>
-    </head>
-    <body>
-        <h1>Load Image For Recognition</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Load image</title>
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+        html {
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+        body {
+            width: 100%;
+            height: 100%;
+            font-family: 'Open Sans', sans-serif;
+            background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),
+                        -webkit-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                        -webkit-linear-gradient(135deg, #670d10 0%, #092756 100%);
+            background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),
+                        -moz-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                        -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+            background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),
+                        -o-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                        -o-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+            background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%,rgba(138,114,76,0) 40%),
+                        -ms-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                        -ms-linear-gradient(-45deg, #670d10 0%, #092756 100%);
+            background: linear-gradient(to bottom, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                        linear-gradient(135deg, #670d10 0%, #092756 100%);
+        }
+        .login {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin: -150px 0 0 -150px;
+            width: 300px;
+            height: 300px;
+        }
+        .login h1 {
+            color: #00f2ff;
+            text-shadow: 0 0 10px rgba(0,0,0,0.3);
+            letter-spacing: 1px;
+            text-align: center;
+        }
+        input {
+            width: 100%;
+            margin-bottom: 10px;
+            background: rgba(0,0,0,0.3);
+            border: none;
+            outline: none;
+            padding: 10px;
+            font-size: 13px;
+            color: #fff;
+            text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+            border: 1px solid rgba(0,0,0,0.3);
+            border-radius: 4px;
+            box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
+            transition: box-shadow .5s ease;
+        }
+        input:focus {
+            box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2);
+        }
+        .btn {
+            display: inline-block;
+            padding: 4px 10px;
+            margin-bottom: 0;
+            font-size: 13px;
+            line-height: 18px;
+            color: #333;
+            text-align: center;
+            text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+            vertical-align: middle;
+            background-color: #f5f5f5;
+            background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+            border: 1px solid #e6e6e6;
+            border-radius: 4px;
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+            cursor: pointer;
+            transition: background-position 0.1s linear;
+        }
+        .btn:hover {
+            background-color: #e6e6e6;
+            color: #333;
+            text-decoration: none;
+            background-position: 0 -15px;
+        }
+        .btn-large {
+            padding: 9px 14px;
+            font-size: 15px;
+            border-radius: 5px;
+        }
+        .btn-primary {
+            background-color: #4a77d4;
+            background-image: linear-gradient(to bottom, #6eb6de, #4a77d4);
+            border: 1px solid #3762bc;
+            text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
+        }
+        .btn-primary:hover {
+            background-color: #4a77d4;
+        }
+        .btn-block {
+            width: 100%;
+            display: block;
+        }
+        .recover-password-link {
+            color: #00f2ff;
+        }
 
-        <form method="POST" enctype="multipart/form-data">
+        .recover-password-link:hover {
+            color: #4bee1e;
+        }
+    </style>
+</head>
+<body>
+    <div class="login">
+        <h1>Load Image For Recognition</h1>
+        <form method="post">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Load</button>
+            <div class="form-group">
+                {{ form.as_p }}
+            </div>
+            <button type="submit" class="btn btn-primary btn-block btn-large">Load</button>
+            <a href="/accounts/profile" class="recover-password-link">Return to the Main Page</a>
         </form>
-        {% if text %}
-            <h2>Plate Number</h2>
-            <p>{{ text }}</p>
-        {% endif %}
-        <p>{{ error }}</p>
-        <a href="/accounts/profile" class="btn btn-light me-2">Return to the Main Page</a>
-    </body>
+    </div>
+</body>
 </html>
