--- a/ParkEasy/users/templates/users/edit_user.html
+++ b/ParkEasy/users/templates/users/edit_user.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         {% load static %}
         <link rel="stylesheet" href="{% static 'users/style.css' %}">
@@ -14,13 +15,14 @@
             }
 
             html, body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            font-family: 'Open Sans', sans-serif;
-            background: linear-gradient(to bottom, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                        linear-gradient(135deg, #670d10 0%, #092756 100%);
+                width: 100%;
+                height: 100%;
+                margin: 0;
+                padding: 0;
+                font-family: 'Open Sans', sans-serif;
+                background: linear-gradient(to bottom, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
+                            linear-gradient(135deg, #670d10 0%, #092756 100%);
+                background-attachment: fixed;
             }
 
             .login {
@@ -148,21 +150,6 @@
         <div class="row">
             <div class="container-fluid">
                 <div class="row py-3">
-                    <div class="col-md-8">
-                        <h1 class="text-white">
-                            <a href="/" class="text-decoration-none text-white">Park Easy</a>
-                        </h1>
-                    </div>
-                    <div class="col-md-4 d-flex align-items-center justify-content-end">
-                        {% if user.is_superuser %}
-                            <a href="{% url 'admin_panel:users' %}" class="btn btn-secondary">Admin Panel</a>
-                        {% endif %}
-                        <form id="logout-form" action="/logout/" method="post">
-                            {% csrf_token %}
-                            <button type="submit" class="btn btn-light me-2">Log Out</button>
-                        </form>
-                        <a href="/change_password" class="btn btn-light me-2">Change password</a>
-                    </div>
                 </div>
             </div>
         </div>
