--- a/ParkEasy/users/templates/users/login.html
+++ b/ParkEasy/users/templates/users/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <style>
         * {
@@ -130,7 +131,6 @@
                 </div>
             {% endif %}
             <div class="form-group">
-                {{ form.username.label_tag }}
                 {{ form.username }}
                 {% if form.username.errors %}
                     <div class="errorlist">
@@ -141,7 +141,6 @@
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ form.password.label_tag }}
                 {{ form.password }}
                 {% if form.password.errors %}
                     <div class="errorlist">
