додано кнопку завантаження історії паркувань

--- a/ParkEasy/users/templates/users/parking_history.html
+++ b/ParkEasy/users/templates/users/parking_history.html
@@ -63,7 +63,7 @@
         </div>
         <div class="row">
             <div class="container mt-4 text-end">
-                <a href="{% url 'users:generate_user_parking_report' %}" class="btn btn-light me-2">Завантажити історію паркувать</a>
+                <a href="{% url 'users:generate_user_parking_report' %}" class="btn btn-light me-2">Завантажити історію паркувань</a>
             </div>
         </div>
         <div class="row">
