+ візуал, але ще не кінець

--- a/ParkEasy/neural_networks/templates/neural_networks/upload_image.html
+++ b/ParkEasy/neural_networks/templates/neural_networks/upload_image.html
@@ -121,7 +121,7 @@
 <body>
     <div class="login">
         <h1>Load Image For Recognition</h1>
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="form-group">
                 {{ form.as_p }}
