--- a/ParkEasy/users/templates/users/edit_user.html
+++ b/ParkEasy/users/templates/users/edit_user.html
@@ -61,35 +61,32 @@
                 box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2);
             }
             .btn {
-                display: inline-block;
-                padding: 10px 15px;
-                font-size: 13px;
-                color: #fff;
-                background-color: #4a77d4;
-                background-image: linear-gradient(to bottom, #6eb6de, #4a77d4);
-                border: 1px solid #3762bc;
-                border-radius: 4px;
-                text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
-                box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
-                cursor: pointer;
-                transition: background-color 0.3s;
-                text-align: center;
-                margin-right: 10px;
+            padding: 10px 15px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #4a77d4;
+            background-image: linear-gradient(to bottom, #6eb6de, #4a77d4);
+            border: 1px solid #3762bc;
+            border-radius: 8px;
+            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+            cursor: pointer;
+            transition: background-color 0.3s, transform 0.2s;
             }
-            .btn-secondary {
-                background-color: #e6e6e6;
-                background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-                border: 1px solid #e6e6e6;
-                color: #333;
-                text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-            }
+
             .btn:hover {
                 background-color: #3762bc;
-                background-image: linear-gradient(to bottom, #4a77d4, #3762bc);
+                transform: translateY(-2px);
             }
+
+            .btn-secondary {
+                background-color: #e6e6e6;
+                color: #333;
+            }
+
             .btn-secondary:hover {
                 background-color: #d5d5d5;
             }
+
             .recover-password-link {
                 display: block;
                 margin-top: 10px;
@@ -143,11 +140,20 @@
                 max-width: 800px;
                 overflow: visible;
             }
+            .change-password-btn {
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                font-size: 17px;
+                padding: 5px 10px;
+            }
         </style>
     </head>
     <body>
+        <a href="/change_password" class="btn btn-secondary change-password-btn">Change Password</a>
     <div class="container">
         <div class="row">
+            
             <div class="container-fluid">
                 <div class="row py-3">
                 </div>
