--- a/ParkEasy/users/templates/users/profile.html
+++ b/ParkEasy/users/templates/users/profile.html
@@ -1,146 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="/media/favicon.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'users/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Park Easy</title>
     <style>
         * {
             box-sizing: border-box;
         }
-        html {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
+
+        html,
         body {
             width: 100%;
             height: 100%;
+            margin: 0;
+            padding: 0;
             font-family: 'Open Sans', sans-serif;
-            background: -webkit-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                        -webkit-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                        -webkit-linear-gradient(135deg, #670d10 0%, #092756 100%);
-            background: -moz-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                        -moz-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                        -moz-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-            background: -o-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                        -o-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                        -o-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-            background: -ms-radial-gradient(0% 100%, ellipse cover, rgba(104,128,138,.4) 10%, rgba(138,114,76,0) 40%),
-                        -ms-linear-gradient(top, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                        -ms-linear-gradient(-45deg, #670d10 0%, #092756 100%);
-            background: linear-gradient(to bottom, rgba(57,173,219,.25) 0%, rgba(42,60,87,.4) 100%),
-                        linear-gradient(135deg, #670d10 0%, #092756 100%);
+            background: linear-gradient(to bottom, rgba(57, 173, 219, .25) 0%, rgba(42, 60, 87, .4) 100%),
+                linear-gradient(135deg, #670d10 0%, #092756 100%);
+            overflow: hidden;
         }
-        .login {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin: -250px 0 0 -150px;
-            width: 300px; /* Adjust width */
-            background: rgba(0,0,0,0.5); /* Background for better readability */
-            padding: 20px; /* Padding for spacing */
-            border-radius: 8px; /* Rounded corners */
+
+        .container-fluid {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
-        .login h1 {
+
+        .header {
+            padding: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .header h1 {
             color: #fff;
-            text-shadow: 0 0 10px rgba(0,0,0,0.3);
-            letter-spacing: 1px;
+            margin: 0;
             text-align: center;
-            margin-bottom: 20px;
+            flex: 1;
         }
-        input {
-            width: 100%;
-            margin-bottom: 10px;
-            background: rgba(0,0,0,0.3);
-            border: none;
-            outline: none;
-            padding: 10px;
-            font-size: 13px;
-            color: #fff;
-            text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-            border: 1px solid rgba(0,0,0,0.3);
-            border-radius: 4px;
-            box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
-            transition: box-shadow .5s ease;
+
+        .header .buttons {
+            display: flex;
+            gap: 10px;
+            position: absolute;
+            top: 20px;
         }
-        input:focus {
-            box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2);
+
+        .header .buttons.left {
+            left: 20px;
         }
+
+        .header .buttons.right {
+            right: 20px;
+        }
+
         .btn {
-            display: inline-block;
             padding: 10px 15px;
-            font-size: 13px;
+            font-size: 16px;
             color: #fff;
             background-color: #4a77d4;
             background-image: linear-gradient(to bottom, #6eb6de, #4a77d4);
             border: 1px solid #3762bc;
-            border-radius: 4px;
-            text-shadow: 1px 1px 1px rgba(0,0,0,0.4);
-            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5);
+            border-radius: 8px;
+            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
             cursor: pointer;
-            transition: background-color 0.3s;
-            text-align: center;
-            margin-right: 10px;
+            transition: background-color 0.3s, transform 0.2s;
         }
-        .btn-secondary {
-            background-color: #e6e6e6;
-            background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
-            border: 1px solid #e6e6e6;
-            color: #333;
-            text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-        }
+
         .btn:hover {
             background-color: #3762bc;
-            background-image: linear-gradient(to bottom, #4a77d4, #3762bc);
+            transform: translateY(-2px);
         }
+
+        .btn-secondary {
+            background-color: #e6e6e6;
+            color: #333;
+        }
+
         .btn-secondary:hover {
             background-color: #d5d5d5;
         }
-        .recover-password-link {
-            display: block;
-            margin-top: 10px;
+
+        .footer {
+            padding: 20px;
             text-align: center;
             color: #fff;
-            text-decoration: none;
-            font-size: 13px;
         }
-        .recover-password-link:hover {
-            text-decoration: underline;
+
+        /* Анімація зірок */
+        .stars {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: transparent url('https://media.giphy.com/media/2fTTsqbVMpAyKh9AK5/giphy.gif') repeat top center;
+            z-index: 0;
+            opacity: 0.2;
+        }
+
+        /* Стан паркування */
+        .btn-parking {
+            display: inline-block;
+            padding: 10px 15px;
+            font-size: 16px;
+            color: #fff;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .start-parking {
+            background-color: #28a745;
+            border: 1px solid #218838;
+        }
+
+        .finish-parking {
+            background-color: #dc3545;
+            border: 1px solid #c82333;
+        }
+
+        .start-parking:hover,
+        .finish-parking:hover {
+            transform: scale(1.05);
+        }
+
+        .table {
+            background-color: transparent;
+            color: #fff;
+            table-layout: auto;
+            margin: 20px auto;
+            width: 90%;
+        }
+
+        .table th,
+        .table td {
+            background-color: rgba(0, 0, 0, 0.5);
+            color: #fff;
+            white-space: nowrap;
+        }
+
+        .table-bordered {
+            border: 1px solid rgba(255, 255, 255, 0.5);
+        }
+
+        .table thead th {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: #fff;
         }
     </style>
 </head>
+
 <body>
     <div class="container-fluid">
-        <div class="row py-3">
-            <div class="col-md-8">
-                <h1 class="text-white">
-                    <a href="/" class="text-decoration-none text-white">Park Easy</a>
-                </h1>
-                <h1 class="text-white">Current Rate: {{ current_rate }} UAH / hour</h1>
+        <div class="header">
+            <div class="buttons left">
+                <a href="{% url 'users:edit_user' %}" class="btn btn-secondary">Edit Personal Data</a>
             </div>
-            <div class="col-md-4 d-flex align-items-center justify-content-end">
-                {% if user.is_superuser %}
-                    <a href="{% url 'admin_panel:users' %}" class="btn btn-secondary">Admin Panel</a>
-                {% endif %}
+            <h1><a href="/" class="text-decoration-none text-white">Park Easy</a></h1>
+            <div class="buttons right">
                 <form id="logout-form" action="/logout/" method="post">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-light me-2">Log Out</button>
+                    <button type="submit" class="btn btn-secondary">Log Out</button>
                 </form>
-                <a href="/change_password" class="btn btn-light me-2">Change password</a>
-                <a href="{% url 'users:edit_user' %}" class="btn btn-light me-2">Edit Personal Data </a>
-                <a href="{% url 'users:parking_history' %}" class="btn btn-light me-2">Parking History</a>
-                <a href="/neunet/upload_image_start/" class="btn btn-light me-2">Start Parking</a>
-                <a href="/neunet/upload_image_finish/" class="btn btn-light me-2">Finish Parking</a>
             </div>
         </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-B6sLOLr/6+oqM5fCMtG5qH0cSAO6qDl3jI4gW2G14NC7Glg7mGFPp4XuhFffTJf3" crossorigin="anonymous"></script>
+        <div class="d-flex justify-content-center align-items-center flex-column">
+            <h1 class="text-white">Welcome {{ request.user.username }}</h1>
+            <h3 class="text-white">Current Rate: {{ current_rate }} UAH / hour</h3> 
+            <div class="d-flex justify-content-center align-items-center flex-column">
+                <a href="/neunet/upload_image_start/" class="btn-parking start-parking">Start Parking</a> 
+                <a href="/neunet/upload_image_finish/" class="btn-parking finish-parking">Finish Parking</a>
+            </div>
+        </div>
+        <div class="container mt-4">
+            <table class="table table-bordered mt-4">
+                <thead>
+                    <tr>
+                        <th>User Name</th>
+                        <th>Plate Number</th>
+                        <th>Parking Start</th>
+                        <th>Parking End</th>
+                        <th>Completed</th>
+                        <th>Duration (hours)</th>
+                        <th>Rate (UAH / hour)</th>
+                        <th>Cost (UAH)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for parking in page_obj %}
+                    <tr>
+                        <td>{{ parking.plate.user.name }}</td>
+                        <td>{{ parking.plate }}</td>
+                        <td>{{ parking.parking_start|date:"Y-m-d H:i:s" }}</td>
+                        <td>{% if parking.parking_end %}{{ parking.parking_end|date:"Y-m-d H:i:s" }}{% endif %}</td>
+                        <td>{% if parking.is_completed %}Yes{% else %}No{% endif %}</td>
+                        <td>{% if parking.is_completed %}{{ parking.duration }}{% else %}{% endif %}</td>
+                        <td>{% if parking.rate %}{{ parking.rate }}{% else %}{% endif %}</td>
+                        <td>{% if parking.cost %}{{ parking.cost }}{% endif %}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="10" class="text-center">No parking history found</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="container mt-4">
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page=1" aria-label="First">
+                            <span aria-hidden="true">&laquo;&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                    {% for num in page_obj.paginator.page_range %}
+                    {% if page_obj.number == num %}
+                    <li class="page-item active" aria-current="page"><span class="page-link">{{ num }}</span></li>
+                    {% else %}
+                    <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+                    {% endif %}
+                    {% endfor %}
+                    {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}" aria-label="Last">
+                            <span aria-hidden="true">&raquo;&raquo;</span>
+                        </a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </div>
+    </div>
 </body>
+
 </html>
